# Efficient-LLM-Inference

./: README.md  pyproject.toml
docs/: SUMMARIZATION.md
examples/: basic_benchmark.py  comprehensive_benchmark.py  quantized_cache.py  sparsity_benchmark.py  summarization_benchmark.py
src/: __init__.py
src/benchmarking/: __init__.py  benchmarker.py  mmlu.py  summarization.py
src/cache/: __init__.py  implementations.py
src/core/: __init__.py  config.py  utils.py
src/cuda/: __init__.py  extensions.py
src/datasets/: __init__.py  loaders.py
src/evaluation/: __init__.py  accuracy.py  quality.py  rouge.py
src/quantization/: __init__.py  ops.py
src/sparsity/: __init__.py  metrics.py  pruning.py  sparse_model.py
